[package]
name = "ptchan-gateway"
version = "0.1.0"
edition = "2021"
description = "Socket.IO to webhook gateway for ptchan events"
publish = false

[dependencies]
anyhow = "1.0"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
hmac = "0.12"
humantime = "2.1"
prometheus = "0.14"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust_socketio = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_path_to_error = "0.1"
sha2 = "0.10"
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

[dev-dependencies]
tempfile = "3.10"
